Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -497,8 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = None\n",
-    "recoleta_"
+    "recoleta_marker = None\n"
    ]
   },
   {
