Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -498,7 +498,7 @@
    "outputs": [],
    "source": [
     "recoleta_marker = None\n",
-    "recoleta_"
+    "recoleta_marker = marker_two"
    ]
   },
   {
